--- a/ActivityTest15ExplicitIntent/AndroidManifest.xml
+++ b/ActivityTest15ExplicitIntent/AndroidManifest.xml
@@ -22,6 +22,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:label="Result Activity"
+            android:name=".ResultActivity" >
+        </activity>
     </application>
 
 </manifest>
