--- a/ActivityTest16Browser/AndroidManifest.xml
+++ b/ActivityTest16Browser/AndroidManifest.xml
@@ -21,7 +21,7 @@
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.DEFAULT" />
                 
                 <data android:scheme="http" />
             </intent-filter>
