Update ActivityTest15 by assigning go back function to home icon and revise README.md accordingly

--- a/ActivityTest15ExplicitIntent/AndroidManifest.xml
+++ b/ActivityTest15ExplicitIntent/AndroidManifest.xml
@@ -24,7 +24,8 @@
         </activity>
         <activity
             android:label="Result Activity"
-            android:name=".ResultActivity" >
+            android:name=".ResultActivity"
+            android:parentActivityName=".MainActivity" >
         </activity>
     </application>
 
