Add some comments to code and update READEME.txt with description on ContentProviderTest05Todos

--- a/ContentProviderTest05Todos/AndroidManifest.xml
+++ b/ContentProviderTest05Todos/AndroidManifest.xml
@@ -28,7 +28,8 @@
         </activity>
         <provider 
       		android:name=".contentprovider.MyTodoContentProvider"
-      		android:authorities="cn.nec.nlc.example.ContentProviderTest05" >
+      		android:authorities="cn.nec.nlc.example.ContentProviderTest05"
+      		android:enabled="false" >
    		</provider> <!-- android:enabled="false" -->
     </application>
 
