change the path of authorities and delete android:enabled=false in manifest.xml

--- a/ContentProviderTest05Todos/AndroidManifest.xml
+++ b/ContentProviderTest05Todos/AndroidManifest.xml
@@ -28,8 +28,7 @@
         </activity>
         <provider 
       		android:name=".contentprovider.MyTodoContentProvider"
-      		android:authorities="cn.nec.nlc.example.contentprovidertest05"
-      		android:enabled="false" >
+      		android:authorities="cn.nec.nlc.example.contentprovidertest05.contentprovider" >
    		</provider> <!-- android:enabled="false" -->
     </application>
 
