--- a/GradleTest01Basics/build.gradle
+++ b/GradleTest01Basics/build.gradle
@@ -3,3 +3,27 @@ task hello {
         println 'Hello world!'
     }
 }
+
+task upper << {
+    String someString = 'mY_nAmE'
+    println "Original: " + someString
+    println "Upper case: " + someString.toUpperCase()
+}
+
+task count << {
+    4.times { print "$it " }
+    println ""
+}
+
+task taskX(dependsOn: 'taskY') << {
+    println 'taskX'
+}
+task taskY << {
+    println 'taskY'
+}
+
+4.times { counter ->
+    task "task$counter" << {
+        println "I'm task number $counter"
+    }
+}
