--- a/Bagilevi-Pedometer/app/src/main/AndroidManifest.xml
+++ b/Bagilevi-Pedometer/app/src/main/AndroidManifest.xml
@@ -6,10 +6,11 @@
       
     <uses-sdk android:minSdkVersion="4" />
 
+    <!-- for re-register listeners when screen is off -->
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application android:icon="@drawable/icon" android:label="@string/app_name">
-        <activity android:name=".PedometerActivity"
+        <activity android:name=".ui.PedometerActivity"
                   android:label="@string/app_name"
                   android:configChanges="orientation">
             <intent-filter>
@@ -17,7 +18,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SettingsActivity"
+        <activity android:name=".ui.SettingsActivity"
                 android:label="@string/activity_settings">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,7 +26,7 @@
             </intent-filter>
         </activity>
 
-        <service android:name=".StepService"/>
+        <service android:name=".service.StepService"/>
 
     </application>
 
