Revise AT75 to test proguard on released .apk

--- a/AT75MapLocationContact/app/build.gradle
+++ b/AT75MapLocationContact/app/build.gradle
@@ -13,7 +13,7 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true // Set the minifyEnabled property to true to enable ProGuard
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
