--- a/coursera-android-labs-master/Fragments/Lab3c_FragmentsLab/AndroidManifest.xml
+++ b/coursera-android-labs-master/Fragments/Lab3c_FragmentsLab/AndroidManifest.xml
@@ -6,13 +6,14 @@
 
     <uses-sdk
         android:minSdkVersion="13"
-        android:targetSdkVersion="18" />
+        android:targetSdkVersion="21" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <!-- if android:configChanges="orientation|screenSize" there will be no change when in landscape -->
         <activity
             android:name="course.labs.fragmentslab.MainActivity"
             android:label="@string/app_name" >
