--- a/AT82EventBusDemo/app/src/main/AndroidManifest.xml
+++ b/AT82EventBusDemo/app/src/main/AndroidManifest.xml
@@ -22,6 +22,18 @@
             android:label="@string/app_name"
             android:theme="@style/AppTheme" >
         </activity>
+        <activity
+            android:name=".DiffThreadModeActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme" >
+        </activity>
+        <activity
+            android:name=".SendStickyEventActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme" >
+        </activity>
     </application>
 
 </manifest>
