--- a/AT93RoboGuiceTest/app/build.gradle
+++ b/AT93RoboGuiceTest/app/build.gradle
@@ -10,24 +10,19 @@ android {
         targetSdkVersion 22
         versionCode 1
         versionName "1.0"
-//        multiDexEnabled true
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-//            multiDexEnabled true
         }
     }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-//    compile files('libs/roboguice-3.0.1.jar')
-//    provided files('libs/roboblender-3.0.1.jar')
-    //    compile 'org.roboguice:roboguice:3.+'
-    //    provided 'org.roboguice:roboblender:3.+'
-    //    // For the optional Nullable annotation
-    //    compile 'com.google.code.findbugs:jsr305:1.3.9'
-//    compile files('libs/javax.inject-1.jar')
+    compile 'org.roboguice:roboguice:3.+'
+    provided 'org.roboguice:roboblender:3.+'
+    // For the optional Nullable annotation
+    compile 'com.google.code.findbugs:jsr305:1.3.9'
 }
