--- a/AT93RoboGuiceTest/app/build.gradle
+++ b/AT93RoboGuiceTest/app/build.gradle
@@ -25,4 +25,11 @@ dependencies {
     provided 'org.roboguice:roboblender:3.+'
     // For the optional Nullable annotation
     compile 'com.google.code.findbugs:jsr305:1.3.9'
+
+//    // Robolectric
+//    testCompile 'junit:junit:4.12'
+//    testCompile 'org.hamcrest:hamcrest-core:1.1'
+//    testCompile 'org.hamcrest:hamcrest-library:1.1'
+//    testCompile 'org.hamcrest:hamcrest-integration:1.1'
+//    testCompile "org.robolectric:robolectric:3.0"
 }
