--- a/AT98FabTest/app/build.gradle
+++ b/AT98FabTest/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "22.0.1"
 
     defaultConfig {
-        applicationId "cn.jamesli.example.at97swiperefreshlayout"
+        applicationId "cn.jamesli.example.at98fabtest"
         minSdkVersion 21
         targetSdkVersion 22
         versionCode 1
@@ -21,7 +21,6 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:support-v4:22.2.1'
-    compile 'com.shamanland:fab:0.0.8'
 //    compile 'com.melnykov:floatingactionbutton:1.3.0'
+    compile 'com.shamanland:fab:0.0.8'
 }
