--- a/BT01ActionBarCompat/app/build.gradle
+++ b/BT01ActionBarCompat/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "22.0.1"
 
     defaultConfig {
-        applicationId "cn.jamesli.example.at99swiperefreshwithgridview"
+        applicationId "cn.jamesli.example.bt01actionbarcompat"
         minSdkVersion 21
         targetSdkVersion 22
         versionCode 1
@@ -21,6 +21,6 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    //    compile 'com.android.support:appcompat-v7:22.2.1'
     compile 'com.android.support:support-v4:22.2.1'
-    compile 'com.shamanland:fab:0.0.8'
 }
