Minor Revision to BT03EasyCursorTest to play with EasyCursor

--- a/BT03EasyCursorTest/app/build.gradle
+++ b/BT03EasyCursorTest/app/build.gradle
@@ -38,4 +38,5 @@ dependencies {
 //    compile 'uk.co.alt236:easycursor-android:1.0.0'
 //    compile 'com.commonsware.cwac:merge:1.1.+'
     compile 'com.google.code.gson:gson:2.3'
+    compile 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
 }
