--- a/BT10iBeaconTxRx/app/src/main/AndroidManifest.xml
+++ b/BT10iBeaconTxRx/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".activity.RxActivity"
+            android:name=".activity.HostActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
