--- a/BT10iBeaconTxRx/app/build.gradle
+++ b/BT10iBeaconTxRx/app/build.gradle
@@ -24,4 +24,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.0.0'
     compile 'org.altbeacon:android-beacon-library:2+'
     compile 'com.ikimuhendis:ldrawer:0.1'
+    compile 'com.daimajia.numberprogressbar:library:1.2@aar'
 }
