--- a/BT10iBeaconTxRx/app/src/main/AndroidManifest.xml
+++ b/BT10iBeaconTxRx/app/src/main/AndroidManifest.xml
@@ -7,6 +7,8 @@
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <!-- CHANGE_NETWORK_STATE is only required by Android 5.0.2, MotoG XT1079 -->
+    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
