--- a/BT10iBeaconTxRx/app/build.gradle
+++ b/BT10iBeaconTxRx/app/build.gradle
@@ -25,5 +25,7 @@ dependencies {
     compile 'org.altbeacon:android-beacon-library:2+'
     compile 'com.ikimuhendis:ldrawer:0.1'
     compile 'com.daimajia.numberprogressbar:library:1.2@aar'
-    compile 'com.google.guava:guava:18.0'   // for fingerprint saving structure
+    compile 'com.google.guava:guava:18.0'
+    // for fingerprint saving structure
+    compile 'com.android.support:recyclerview-v7:23.0.1'
 }
