Revise AW1AndroidWearTest, change gradle for release apk to Ticwear

--- a/AW1AndroidWearTest/app/build.gradle
+++ b/AW1AndroidWearTest/app/build.gradle
@@ -12,9 +12,22 @@ android {
         versionCode 1
         versionName "1.0"
     }
+
+    signingConfigs {
+        release_for_ticwatch {
+            keyAlias KEY_ALIAS
+            keyPassword KEY_PASSWORD
+            storeFile file(STORE_FILE)
+            storePassword STORE_PASSWORD
+        }
+    }
+
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true      // proguard
+            zipAlignEnabled true    // align
+            shrinkResources true    // remove unused files
+            signingConfig signingConfigs.release_for_ticwatch
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
