--- a/AW1AndroidWearTest/app/src/main/AndroidManifest.xml
+++ b/AW1AndroidWearTest/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="cn.jamesli.example.aw1androidweartest" >
+    package="cn.jamesli.example.aw1androidweartest"
+    android:versionCode="1"
+    android:versionName="1.0" >
 
     <uses-feature android:name="android.hardware.type.watch" />
 
