--- a/BT17EventDispatchForUi/app/build.gradle
+++ b/BT17EventDispatchForUi/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.2"
 
     defaultConfig {
-        applicationId "cn.jamesli.example.bt16mvplogin"
+        applicationId "cn.jamesli.example.bt17eventdispatchforui"
         minSdkVersion 19
         targetSdkVersion 23
         versionCode 1
@@ -22,5 +22,4 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.1.0'
-    compile 'io.reactivex:rxjava:1.0.10'
 }
